--- a/index.html
+++ b/index.html
@@ -44,13 +44,29 @@
 
                 <div class="menu-bg" id="menu-bg"></div>
                 <div id="importantButtonsMobil">
-                    <button>Reservieren</button>
-                    <button id="orderBtn">Bestellung</button>
+                    <button id="reservierenBtn">Reservieren</button>
+                    <button id="orderBtn">
+                        <a href="tel:05214-20309"></a>Bestellung
+                    </button>
                 </div>
             </header>
             <main>
                 <section>
-                    <h2>Pizzeria Restaurant</h2>
+                    <h1>Pizzeria Trattoria Al Cavallino</h1>
+                    <button id="foodMenu">Speisen</button>
+                    <div class="displayNoneFood" id="foodList">
+                        <li>Piizza</li>
+                        <li>Piizza</li>
+                        <li>Piizza</li>
+                        <li>Piizza</li>
+                    </div>
+                    <div id="openHours">
+                        <ul>
+                            <li>Mo & Di: 17:00 bis 22:00 Uhr</li>
+                            <li>DO - SO: 11:00 - 14:00 & 17:00 - 22:00 Uhr</li>
+                            <li id="freeDay">Mittwoch Ruhetag</li>
+                        </ul>
+                    </div>
                 </section>
             </main>
         </div>
