--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <nav class="nav" id="nav">
                         <ul>
                             <li><a href="#">Pizzeria</a></li>
-                            <li><a href="#">Speisen</a></li>
+                            <li><a href="#foodMenu">Speisen</a></li>
                             <li><a href="#">Galerie</a></li>
                             <li><a href="#">Gutschein</a></li>
                             <li><a href="#">Kontakt</a></li>
@@ -55,10 +55,12 @@
                     <h1>Pizzeria Trattoria Al Cavallino</h1>
                     <button id="foodMenu">Speisen</button>
                     <div class="displayNoneFood" id="foodList">
-                        <li>Piizza</li>
-                        <li>Piizza</li>
-                        <li>Piizza</li>
-                        <li>Piizza</li>
+                        <ul>
+                            <li>Piizza</li>
+                            <li>Piizza</li>
+                            <li>Piizza</li>
+                            <li>Piizza</li>
+                        </ul>
                     </div>
                     <div id="openHours">
                         <ul>
