--- a/index.html
+++ b/index.html
@@ -55,12 +55,69 @@
                     <h1>Pizzeria Trattoria Al Cavallino</h1>
                     <button id="foodMenu">Speisen</button>
                     <div class="displayNoneFood" id="foodList">
-                        <ul>
-                            <li>Piizza</li>
-                            <li>Piizza</li>
-                            <li>Piizza</li>
-                            <li>Piizza</li>
-                        </ul>
+                        <!--VorSpeisen -->
+                        <div id="vorSpeisen">
+                            <h3 id="vorSpeisenBtn">Antipasti - Vorspeisen</h3>
+                            <ul id="vorSpeisenList" class="displayNoneFood">
+                                <div class="foodNamePrice">
+                                    <li>Prosciutto Crudo di Parma
+                                        <span>10,50&#128</span>
+                                    </li>
+                                    <p>Parmaschinken mit Parmesan und Oliven</p>
+                                </div>
+                                <div class="foodNamePrice">
+                                    <li>Antipasto Italiano
+                                        <span>15,50&#128</span>
+                                    </li>
+                                    <p>Gemischte Vorspeise (für 2 Personen)</p>
+                                </div>
+                                <div class="foodNamePrice">
+                                    <li>Polenta dello Chef
+                                        <span>9,50&#128</span>
+                                    </li>
+                                    <p>Polenta mit Champignons un Gorgonzolasauce</p>
+                                </div>
+                                <div class="foodNamePrice">
+                                    <li>Caprese
+                                        <span>8,50&#128</span>
+                                    </li>
+                                    <p>Tomaten mit Mozzarella und Basilikum</p>
+                                </div>
+                                <div class="foodNamePrice">
+                                    <li>Bruschetta
+                                        <span>5,50&#128</span>
+                                    </li>
+                                    <p>Getoastetes Weißbrot mit Tomatenwürfeln und Knoblauch</p>
+                                </div>
+                            </ul>
+                        </div>
+
+                        <!--Suppen-->
+
+                        <div id="suppen">
+                            <h3 id="suppenBtn">Zuppe - Suppen</h3>
+                            <ul id="suppenList" class="displayNoneFood">
+                                <div class="foodNamePrice">
+                                    <li>Zuppa di Verdure
+                                        <span>6,50&#128</span>
+                                    </li>
+                                    <p>Italienische Gemüsesuppe</p>
+                                </div>
+                                    
+                                <div class="foodNamePrice">
+                                    <li>Zuppa di Pomodoro
+                                        <span>5,90&#128</span>
+                                    </li>
+                                    <p>Tomatencremesuppe</p>
+                                </div>
+                                <div class="foodNamePrice">
+                                    <li>Zuppa di Funghi
+                                        <span>6,50&#128</span>
+                                    </li>
+                                    <p>Champignoncremesuppe</p>
+                                </div>
+                            </ul>
+                        </div>
                     </div>
                     <div id="openHours">
                         <ul>
