--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div id="importantButtonsMobil">
                     <button id="reservierenBtn">Reservieren</button>
                     <button id="orderBtn">
-                        <a href="tel:05214-20309"></a>Bestellung
+                        <a href="tel:+43-5214-20309"></a>Bestellung
                     </button>
                 </div>
             </header>
