--- a/gallery.html
+++ b/gallery.html
@@ -40,7 +40,7 @@
                             <li><a href="index.html">Pizzeria</a></li>
                             <li><a href="index.html#foodMenu">Speisen</a></li>
                             <li><a href="gallery.html">Galerie</a></li>
-                            <li><a id="gutschein" href="#">Gutschein</a></li>
+                            <li><a id="gutschein" href="gutschein.html">Gutschein</a></li>
                             <li><a href="contact.html">Kontakt</a></li>
                         </ul>
                     </nav>
