--- a/gutschein.html
+++ b/gutschein.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
         <meta charset="UTF-8" />
@@ -57,12 +58,14 @@
             </header>
             <main>
 				<div id="contact">
-					<h4>So erreichen Sie uns:</h4>
-					<p>Al Cavallino</p>
-					<p>Ortsteil Gasse · A- 6105 Leutasch</p>
-					<p></p>Telefon: 05214-20309 · www.al-cavallino.at</p>
+					<h4>Unser Geschenk-Tipp:</h4>
+					<h5>Der Al Cavallino Gutschein!</h5>
+					<p>Verschenken Sie den Gutschein an liebe Freunde 
+						oder einfach als "Dankeschön"...</p>
 				</div>
-			<div id="imObjectMap_2"><iframe id="imObjectMap_2_frame"  src="//maps.google.de/maps?hl=de&amp;f=q&amp;source=s_q&amp;geocode=&amp;q=Gasse+166,+6105+Leutasch,+Austria&amp;t=m&amp;ie=UTF8&amp;hq=&amp;hnear=Gasse+166,+6105+Leutasch,+Austria&amp;z=15&amp;output=embed"></iframe></div>
+			<div id="gutschein-box">
+				<img id="gutscheinImg" src="img/Gutschein.png" alt="gutschein">
+			</div>
             </main>
             <footer>
                 <div>
