--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <li><a href="#menu-bg">Pizzeria</a></li>
                             <li><a href="#foodMenu">Speisen</a></li>
                             <li><a href="gallery.html">Galerie</a></li>
-                            <li><a id="gutschein" href="#">Gutschein</a></li>
+                            <li><a id="gutschein" href="gutschein.html">Gutschein</a></li>
                             <li><a href="contact.html">Kontakt</a></li>
                         </ul>
                     </nav>
