media 768px is ready

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <div id="bar3" class="bar"></div>
                     </div>
                     <nav class="nav" id="nav">
-                        <ul>
+                        <ul id="menu-list">
                             <li><a href="#menu-bg">Pizzeria</a></li>
                             <li><a href="#foodMenu">Speisen</a></li>
                             <li><a href="gallery.html">Galerie</a></li>
@@ -120,11 +120,12 @@
                         </div>
                     </div>
                     <div id="openHours">
-                        <ul>
+                        <ul id="openHoursUl">
                             <li>Mo & Di: 17:00 bis 22:00 Uhr</li>
                             <li>DO - SO: 11:00 - 14:00 & 17:00 - 22:00 Uhr</li>
-                            <li id="freeDay">Mittwoch Ruhetag</li>
+                            
                         </ul>
+                        <p id="freeDay">Mittwoch Ruhetag</p>
                     </div>
                     <div id="aboutUs">
                         <h3>Herzlich Willkommen...</h3>
@@ -139,7 +140,7 @@
                 </section>
             </main>
             <footer>
-                <div>
+                <div id="LastMessage">
                     Mauro, Verena & das gesamte Team freuen sich auf Ihren Besuch!
                 </div>
                 <div>
