--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
                         <div id="bar3" class="bar"></div>
                     </div>
                     <nav class="nav" id="nav">
-                        <ul>
+                        <ul id="menu-list">
                             <li><a href="index.html">Pizzeria</a></li>
                             <li><a href="index.html#foodMenu">Speisen</a></li>
                             <li><a href="gallery.html">Galerie</a></li>
