--- a/gallery.html
+++ b/gallery.html
@@ -56,20 +56,20 @@
             </header>
             <main>
 				<div id="gallery">
-					<img src="img/01.png" alt="pic1">
-					<img src="img/02.png" alt="pic2">
-					<img src="img/03.png" alt="pic3">
+					<img src="img/01.png" class="fade-in" alt="pic1">
+					<img src="img/02.png" class="fade-in" alt="pic2">
+					<img src="img/03.png" class="fade-in" alt="pic3">
 				</div>
 				
 
 				  </div>
             </main>
             <footer>
-                <div>
+                <div class="fade-in">
                     Mauro, Verena & das gesamte Team freuen sich auf Ihren Besuch!
                 </div>
                 <div>
-                    <a href="https://www.facebook.com/alcavallino.leutasch?fref=ts"><i id="facebookLogo" class="fa-brands fa-facebook-square"></i></a>
+                    <a href="https://www.facebook.com/alcavallino.leutasch?fref=ts"><i id="facebookLogo" class="fa-brands fa-facebook-square fade-in"></i></a>
                 </div>
             </footer>
         </div>
