--- a/gutschein.html
+++ b/gutschein.html
@@ -57,22 +57,22 @@
                 </div>
             </header>
             <main>
-				<div id="contact">
+				<div id="contact" class="fade-in">
 					<h4>Unser Geschenk-Tipp:</h4>
 					<h5>Der Al Cavallino Gutschein!</h5>
 					<p>Verschenken Sie den Gutschein an liebe Freunde 
 						oder einfach als "Dankeschön"...</p>
 				</div>
 			<div id="gutschein-box">
-				<img id="gutscheinImg" src="img/Gutschein.png" alt="gutschein">
+				<img id="gutscheinImg"  class="fade-in" src="img/Gutschein.png" alt="gutschein">
 			</div>
             </main>
             <footer>
-                <div>
+                <div  class="fade-in">
                     Mauro, Verena & das gesamte Team freuen sich auf Ihren Besuch!
                 </div>
                 <div>
-                    <a href="https://www.facebook.com/alcavallino.leutasch?fref=ts"><i id="facebookLogo" class="fa-brands fa-facebook-square"></i></a>
+                    <a href="https://www.facebook.com/alcavallino.leutasch?fref=ts"><i id="facebookLogo" class="fa-brands fa-facebook-square fade-in"></i></a>
                 </div>
             </footer>
         </div>
