--- a/index.html
+++ b/index.html
@@ -143,12 +143,12 @@
                     </div>
                 </section>
             </main>
-            <footer class="fade-in">
-                <div id="LastMessage">
+            <footer>
+                <div id="LastMessage" class="fade-in">
                     Mauro, Verena & das gesamte Team freuen sich auf Ihren Besuch!
                 </div>
                 <div>
-                    <a href="https://www.facebook.com/alcavallino.leutasch?fref=ts"><i id="facebookLogo" class="fa-brands fa-facebook-square"></i></a>
+                    <a href="https://www.facebook.com/alcavallino.leutasch?fref=ts"><i id="facebookLogo" class="fa-brands fa-facebook-square fade-in"></i></a>
                 </div>
             </footer>
         </div>
