--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
                 </div>
             </header>
             <main>
-				<div id="contact">
+				<div id="contact" class="fade-in">
 					<h4>So erreichen Sie uns:</h4>
 					<p>Al Cavallino</p>
 					<p>Ortsteil Gasse · A- 6105 Leutasch</p>
@@ -65,11 +65,11 @@
 			<div id="imObjectMap_2"><iframe id="imObjectMap_2_frame"  src="//maps.google.de/maps?hl=de&amp;f=q&amp;source=s_q&amp;geocode=&amp;q=Gasse+166,+6105+Leutasch,+Austria&amp;t=m&amp;ie=UTF8&amp;hq=&amp;hnear=Gasse+166,+6105+Leutasch,+Austria&amp;z=15&amp;output=embed"></iframe></div>
             </main>
             <footer>
-                <div>
+                <div class="fade-in">
                     Mauro, Verena & das gesamte Team freuen sich auf Ihren Besuch!
                 </div>
                 <div>
-                    <a href="https://www.facebook.com/alcavallino.leutasch?fref=ts"><i id="facebookLogo" class="fa-brands fa-facebook-square"></i></a>
+                    <a href="https://www.facebook.com/alcavallino.leutasch?fref=ts"><i id="facebookLogo" class="fa-brands fa-facebook-square fade-in"></i></a>
                 </div>
             </footer>
         </div>
