--- a/index.html
+++ b/index.html
@@ -63,31 +63,31 @@
                         <div id="vorSpeisen" class="fade-in">
                             <h3 id="vorSpeisenBtn">Antipasti - Vorspeisen</h3>
                             <ul id="vorSpeisenList" class="displayNoneFood">
-                                <div class="foodNamePrice">
-                                    <li>Prosciutto Crudo di Parma
+                                <div class="foodNamePrice fade-in">
+                                    <li >Prosciutto Crudo di Parma
                                         <span>10,50&#128</span>
                                     </li>
                                     <p>Parmaschinken mit Parmesan und Oliven</p>
                                 </div>
-                                <div class="foodNamePrice">
+                                <div class="foodNamePrice fade-in">
                                     <li>Antipasto Italiano
                                         <span>15,50&#128</span>
                                     </li>
                                     <p>Gemischte Vorspeise (für 2 Personen)</p>
                                 </div>
-                                <div class="foodNamePrice">
+                                <div class="foodNamePrice fade-in">
                                     <li>Polenta dello Chef
                                         <span>9,50&#128</span>
                                     </li>
                                     <p>Polenta mit Champignons un Gorgonzolasauce</p>
                                 </div>
-                                <div class="foodNamePrice">
+                                <div class="foodNamePrice fade-in">
                                     <li>Caprese
                                         <span>8,50&#128</span>
                                     </li>
                                     <p>Tomaten mit Mozzarella und Basilikum</p>
                                 </div>
-                                <div class="foodNamePrice">
+                                <div class="foodNamePrice fade-in" >
                                     <li>Bruschetta
                                         <span>5,50&#128</span>
                                     </li>
@@ -100,7 +100,7 @@
 
                         <div id="suppen" class="fade-in">
                             <h3 id="suppenBtn">Zuppe - Suppen</h3>
-                            <ul id="suppenList" class="displayNoneFood">
+                            <ul id="suppenList" class="displayNoneFood fade-in">
                                 <div class="foodNamePrice">
                                     <li>Zuppa di Verdure
                                         <span>6,50&#128</span>
