--- a/gallery.html
+++ b/gallery.html
@@ -55,10 +55,10 @@
                 </div>
             </header>
             <main>
-				<div id="gallery">
-					<img src="img/01.png" class="fade-in" alt="pic1">
-					<img src="img/02.png" class="fade-in" alt="pic2">
-					<img src="img/03.png" class="fade-in" alt="pic3">
+				<div id="gallery" >
+					<img src="img/01.png"  alt="pic1">
+					<img src="img/02.png"  alt="pic2">
+					<img src="img/03.png" alt="pic3">
 				</div>
 				
 
