--- a/gutschein.html
+++ b/gutschein.html
@@ -64,7 +64,7 @@
 						oder einfach als "Dankeschön"...</p>
 				</div>
 			<div id="gutschein-box">
-				<img id="gutscheinImg"  class="fade-in" src="img/Gutschein.png" alt="gutschein">
+				<img id="gutscheinImg"  src="img/Gutschein.png" alt="gutschein">
 			</div>
             </main>
             <footer>
