--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
 			<div id="imObjectMap_2"><iframe id="imObjectMap_2_frame"  src="//maps.google.de/maps?hl=de&amp;f=q&amp;source=s_q&amp;geocode=&amp;q=Gasse+166,+6105+Leutasch,+Austria&amp;t=m&amp;ie=UTF8&amp;hq=&amp;hnear=Gasse+166,+6105+Leutasch,+Austria&amp;z=15&amp;output=embed"></iframe></div>
             </main>
             <footer>
-                <div class="fade-in">
+                <div>
                     Mauro, Verena & das gesamte Team freuen sich auf Ihren Besuch!
                 </div>
                 <div>
