--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
                 </div>
             </header>
             <main>
-				<div id="contact" class="fade-in">
+				<div id="contact">
 					<h4>So erreichen Sie uns:</h4>
 					<p>Al Cavallino</p>
 					<p>Ortsteil Gasse · A- 6105 Leutasch</p>
