--- a/gallery.html
+++ b/gallery.html
@@ -65,11 +65,11 @@
 				  </div>
             </main>
             <footer>
-                <div class="fade-in">
+                <div>
                     Mauro, Verena & das gesamte Team freuen sich auf Ihren Besuch!
                 </div>
                 <div>
-                    <a href="https://www.facebook.com/alcavallino.leutasch?fref=ts"><i id="facebookLogo" class="fa-brands fa-facebook-square fade-in"></i></a>
+                    <a href="https://www.facebook.com/alcavallino.leutasch?fref=ts"><i id="facebookLogo" class="fa-brands fa-facebook-square "></i></a>
                 </div>
             </footer>
         </div>
